--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "font-awesome": "^4.7.0",
     "popper.js": "^1.16.1",
     "react": "^16.14.0",
-    "react-scripts": "^5.0.1",
     "react-dom": "^16.14.0",
     "react-popper": "^2.3.0",
     "react-redux": "^5.0.7",
+    "react-redux-form": "^1.16.8",
     "react-router-dom": "^6.13.0",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.10",
     "redux": "^3.7.2",
     "web-vitals": "^2.1.4"
-
   },
   "scripts": {
     "start": "react-scripts start",
