--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux-form": "^1.16.8",
     "react-router-dom": "^6.13.0",
     "react-scripts": "^5.0.1",
+    "react-transition-group": "^2.9.0",
     "reactstrap": "^9.1.10",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
