--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "cross-fetch": "^2.1.0",
     "font-awesome": "^4.7.0",
     "popper.js": "^1.16.1",
+    "prop-types": "^15.6.0",
     "react": "^16.14.0",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^16.14.0",
     "react-popper": "^2.3.0",
     "react-redux": "^5.0.7",
